<resources>
    <string name="app_name">sqlite_test</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="query">Query</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
</resources>
